--- a/sextant/src/App.css
+++ b/sextant/src/App.css
@@ -5,26 +5,12 @@
   //text-align: center;
 }
 
-header {
-  background-image: linear-gradient(to bottom right, purple, cyan);
-  color: white;
-
-  padding: 10px 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-
-  width: 100%;
-  z-index: 999;
-}
-
-header h1 {
-  font-size: 2.5rem;
-  padding: 0.5rem;
-}
-
 @media (max-width: 1280px) {
   .heading {
     font-size: 24px;
   }
+}
+
+.body {
+  margin-top: 200px;
 }
